fix: allow scrollable on mobile

--- a/akihi/src/app.css
+++ b/akihi/src/app.css
@@ -5,7 +5,6 @@
 
   color-scheme: light dark;
   color: #e2e2b6;
-  background-color: #021526;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -13,7 +12,7 @@
   -moz-osx-font-smoothing: grayscale;
   --keyboard-color: #032a5b;
   --nav-color: #09273e;
-  overflow: hidden;
+  overflow-x: hidden;
 }
 
 a {
